Bug 1310045 - Change default error reported from JSMSG_BAD_PROP_ID to JSMSG_UNEXPECTED_TOKEN type when unknown token is received .