js/src/frontend/Parser.cpp
@@ -9039,7 +9039,8 @@ Parser<ParseHandler>::propertyName(YieldHandling yieldHandling, Node propList,
       }
 
       default:
-         report(ParseError, false, null(), JSMSG_BAD_PROP_ID);
+         report(ParseError, false, null(), JSMSG_UNEXPECTED_TOKEN,
+               "property name", TokenKindToDesc(ltok));
         return null();
     }
 
